Like and Dislike functionality

--- a/frontend/src/components/styles/PostElement.css
+++ b/frontend/src/components/styles/PostElement.css
@@ -164,3 +164,20 @@
     border-radius: 5px;
 }
 
+.postHeader{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#dislike{
+    margin-top: 15px;
+}
+
+#postUsername{
+    margin-top: 50px;
+}
+
+#like:hover, #dislike:hover{
+    filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.25));
+}
